--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
     <div class="embed-container">
-        <iframe src='http://gt.kkglobe01.net/game/play?accessToken=c2JmU1pQR0dJVzJPYk5HakFmbHNuUXRNU21qS2ZKTXptZDloNmtBMEl5TlhPWVRqZzczTW1EcVlxdnRtSkVkMg%3D%3D&gid=568b7499a34294cafabd01e9e0532f24&gamecode=20&lang=cn' frameborder='0' allowfullscreen></iframe>
+        <iframe src="http://stgkg.btgame777.com/kgame_electronic_games/568b7499a34294cafabd01e9e0532f24?c=31" frameborder="0" allowfullscreen></iframe>
     </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script>
