更換測試用toutube連結

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </div>
     </nav>
     <div class="embed-container">
-        <iframe src="http://stgkg.btgame777.com/kgame_electronic_games/568b7499a34294cafabd01e9e0532f24?c=31" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/watch?v=AEUmLttrY5s" frameborder="0" allowfullscreen></iframe>
     </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script>
+    <!-- <script>
         function setIframeHeight(iframe) {
             if (iframe) {
                 var iframeWin = iframe.contentWindow || iframe.contentDocument.parentWindow;
@@ -67,7 +67,7 @@
         window.onload = function () {
             setIframeHeight(document.getElementById('external-frame'));
         };
-    </script>
+    </script> -->
 </body>
 
 </html>
