--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         </div>
     </nav>
     <div class="embed-container">
-        <iframe src="https://www.youtube.com/watch?v=AEUmLttrY5s" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/AEUmLttrY5s" frameborder="0" allowfullscreen></iframe>
+        <!-- <iframe src='https://www.youtube.com/embed/AEUmLttrY5s' frameborder='0' allowfullscreen></iframe> -->
     </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- <script>
