--- a/index.html
+++ b/index.html
@@ -20,19 +20,31 @@
     <div class="bg-lobby">
         <!-- 大廳 -->
         <header class="header">
-            <div class="header_container bg-header">
-                <div class="container">
-                    <div class="header_content d-flex  align-items-center">
-                        <!-- logo -->
-                        <div class="" style="width: 50px;">
-                            <a href="#page-top" class="bg-logo js-scroll-trigger"></a>
+            <div class="kw-height bg-header">
+                <div class="header_content d-flex align-items-center justify-content-between">
+                    <div class="col">
+                        <div class="ml-4">
+                            <img src="assets/images/icon-admin.png" class="img-fluid img-size-chacter" alt="">
+                            <span class="title-font text-orange">admin00001</span>
                         </div>
-                        <nav class="main_nav_contaner navbar navbar-expand navbar-light" id="mainNav">
+                    </div>
+                    <div class="col"></div>
+                    <div class="col">
+                        <div class="text-orange text-left">
+                            <img src="assets/images/icon-coin.png" class="img-size" alt="">
+                            <span class="title-font">555000000</span>
+                        </div>
+                    </div>
+                    <!-- logo -->
+                    <!-- <div class="" style="width: 50px;">
+                            <a href="#page-top" class="bg-logo js-scroll-trigger"></a>
+                        </div> -->
+                    <!-- <nav class="main_nav_contaner navbar navbar-expand navbar-light" id="mainNav">
                             <div class="collapse navbar-collapse" id="navbarResponsive">
-                                <ul class="main_nav list-unstyled mb-0 navbar-nav">
-                                    <li class="nav-item mr-2">
-                                        <span>錢：</span>
-                                        <span>100,000.00</span>
+                                <ul class="main_nav list-unstyled mb-0 navbar-nav justify-content-center">
+                                    <li class="nav-item mx-2">
+                                        <img src="assets/images/icon-admin.png" class="img-fluid" style="width:20px;" alt="">
+                                        <span class="text-orange">admin00001</span>
                                     </li>
                                     <li class="nav-item mr-2">
                                         <span>錢：</span>
@@ -40,12 +52,11 @@
                                     </li>
                                 </ul>
                             </div>
-                        </nav>
-                        <!-- Hamburger -->
-                        <!-- <div class="hamburger menu_mm ml-auto" style="line-height: 0;">
+                        </nav> -->
+                    <!-- Hamburger -->
+                    <!-- <div class="hamburger menu_mm ml-auto" style="line-height: 0;">
                             <span class="menu_mm menu-svg"></span>
                         </div> -->
-                    </div>
                 </div>
             </div>
         </header>
@@ -123,6 +134,7 @@
                 }
             })
         </script>
+    </div>
 </body>
 
 </html>
