--- a/game.html
+++ b/game.html
@@ -5,72 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>BTGame</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- owl css -->
+    <link rel="stylesheet" href="assets/css/owl.carousel.css">
+    <!-- my style -->
     <link rel="stylesheet" href="assets/css/style.css">
+
     <script src="assets/js/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Dropdown
+    <header class="header fixed-top">
+        <div class="header_container">
+            <div class="container">
+                <div class="header_content d-flex  align-items-center">
+                    <!-- Back -->
+                    <a class="pt-2" href="index.html">
+                        <span class="menu_mm menu-svg"></span>
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+                </div>
+            </div>
         </div>
-    </nav>
+
+    </header>
+    <div class="fixed-top" style="width: 50px;">
+        <a href="#page-top" class="bg-logo js-scroll-trigger"></a>
+    </div>
     <div class="embed-container">
-        <!-- <iframe src="https://www.youtube.com/embed/AEUmLttrY5s" frameborder="0" allowfullscreen></iframe> -->
-        <iframe src="http://gt.kkglobe01.net/game/play?gid=26361db7ebe1a712687bee63ef0ca92f&table_id=slot004" frameborder="0" allowfullscreen></iframe>
-        <!-- <iframe src='https://www.youtube.com/embed/AEUmLttrY5s' frameborder='0' allowfullscreen></iframe> -->
+        <iframe src="http://gt.kkglobe01.net/game/play?accessToken=c2JmU1pQR0dJVzJPYk5HakFmbHNuUXRNU21qS2ZKTXptZDloNmtBMEl5TkhmN0Q2MzF5Qmp5YllyZU5XUGJPWA%3D%3D&gid=568b7499a34294cafabd01e9e0532f24&gamecode=2&lang=cn" frameborder="0" allowfullscreen></iframe>
     </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
-    <!-- <script>
-        function setIframeHeight(iframe) {
-            if (iframe) {
-                var iframeWin = iframe.contentWindow || iframe.contentDocument.parentWindow;
-                if (iframeWin.document.body) {
-                    iframe.height = iframeWin.document.documentElement.scrollHeight || iframeWin.document.body.scrollHeight;
-                }
-            }
-        };
-
-        window.onload = function () {
-            setIframeHeight(document.getElementById('external-frame'));
-        };
-    </script> -->
 </body>
 
 </html>
