--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>BTGame</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- owl css -->
     <link rel="stylesheet" href="assets/css/owl.carousel.css">
@@ -32,7 +32,7 @@
                     <div class="col">
                         <div class="text-orange text-left">
                             <img src="assets/images/icon-coin.png" class="img-size" alt="">
-                            <span class="title-font">555000000</span>
+                            <span class="title-font w-100">1000.00</span>
                         </div>
                     </div>
                     <!-- logo -->
