--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
     <!-- navbar -->
     <header class="header fixed-top">
         <div class="header_container">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="header_content d-flex  align-items-center">
                     <!-- Back -->
                     <a class="pt-2" href="index.html">
