--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <div class="kw-height bg-header">
                 <div class="header_content d-flex align-items-center justify-content-between">
                     <div class="col">
-                        <div class="ml-4">
+                        <div class="kw-ml-admin">
                             <img src="assets/images/icon-admin.png" class="img-fluid img-size-chacter" alt="">
                             <span class="title-font text-orange">admin00001</span>
                         </div>
                     </div>
                     <div class="col"></div>
                     <div class="col">
-                        <div class="text-orange text-left">
+                        <div class="text-gold text-left">
                             <img src="assets/images/icon-coin.png" class="img-size" alt="">
                             <span class="title-font w-100">1000.00</span>
                         </div>
