--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <!-- 大廳 -->
         <header class="header">
             <div class="kw-height bg-header">
+                <div class="bg-logo"></div>
                 <div class="header_content d-flex align-items-center justify-content-between">
                     <div class="col">
                         <div class="kw-ml-admin">
