移除game.html中的bg-logo的class

--- a/game.html
+++ b/game.html
@@ -30,9 +30,9 @@
         </div>
 
     </header>
-    <div class="fixed-top" style="width: 50px;">
+    <!-- <div class="fixed-top" style="width: 50px;">
         <a href="#page-top" class="bg-logo js-scroll-trigger"></a>
-    </div>
+    </div> -->
     <div class="embed-container">
         <iframe src="http://gt.kkglobe01.net/game/play?accessToken=c2JmU1pQR0dJVzJPYk5HakFmbHNuUXRNU21qS2ZKTXptZDloNmtBMEl5TkhmN0Q2MzF5Qmp5YllyZU5XUGJPWA%3D%3D&gid=568b7499a34294cafabd01e9e0532f24&gamecode=2&lang=cn" frameborder="0" allowfullscreen></iframe>
     </div>
